added another pic and fixed some styling

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
   --font-size-xlarge: 6.25rem; /* 100px */
   --font-size-large: 4.375rem; /* 70px */
   --font-size-normal: 2.5rem; /* 40px */
+  --font-size-slighly-bigger: 3rem
 }
 
 h1 {
@@ -149,7 +150,7 @@ table.table td {
 }
 
 .layout.introLayout h2 {
-  font-size: var(--font-size-normal);
+  font-size: var(--font-size-slighly-bigger);
   font-family: var(--font-roboto);
   margin: 0;
 }
